Fixed spacing of team logos

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -146,6 +146,7 @@ footer {
     display: inline-block;
     margin-left: 0.5em;
     margin-right: 0.5em;
+    margin-bottom: 1em;
 }
 
 .team > a > div {
